# kulala.nvim

./: .conventional-changelog.config.mjs  .editorconfig  .gitignore  .gitmodules  .log.lua  .luacheckrc  .luarc.json  .styluaignore  .yamllint.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  Makefile  NEWS.md  README.md  REVIEW_SUMMARY.md  action.yml  lazy.lua  minit-userscript.lua  minit.lua  minit.sh  minitest.lua  minitest.sh  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylua.toml  test.lua
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release.yml
doc/: kulala.NEWS.txt  kulala.README.txt  kulala.api.txt  kulala.authentication.txt  (+79 more)
lua/tree-sitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
lua/tree-sitter/bindings/c/: tree-sitter-kulala-http.pc.in
lua/tree-sitter/bindings/c/tree_sitter/: tree-sitter-kulala-http.h
lua/tree-sitter/bindings/go/: binding.go  binding_test.go
lua/tree-sitter/bindings/node/: binding.cc  index.js
lua/tree-sitter/bindings/python/tests/: test_binding.py
lua/tree-sitter/bindings/python/tree_sitter_kulala_http/: __init__.py  binding.c
lua/tree-sitter/bindings/rust/: build.rs  lib.rs
lua/tree-sitter/bindings/swift/TreeSitterKulalaHttpTests/: TreeSitterKulalaHttpTests.swift
lua/tree-sitter/queries/kulala_http/: highlights.scm  injections.scm
lua/tree-sitter/queries/markdown/: injections.scm
lua/tree-sitter/snapshots/: advanced.http  advanced.http.current-tree  test.http  test.http.current-tree
lua/tree-sitter/src/: grammar.json  node-types.json  parser.c
(+420 files in other folders)
