[package]
name = "tree-sitter-kulala-http"
description = "Kulala HTTP Parser"
version = "0.1.0"
authors = ["Yaro Apletov <yaro@dream-it.es>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kulala-http"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mistweaverco/kulala.nvim/lua/tree-sitter"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
