[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-kulala-http"
description = "Kulala HTTP Parser"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "kulala-http"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Yaro Apletov", email = "yaro@dream-it.es" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/mistweaverco/kulala.nvim/lua/tree-sitter"
Funding = "https://github.com/mistweaverco/kulala.nvim"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
